# docs/swagger.json
@@ -78,6 +78,55 @@
                 }
             }
         },
+        "/api/createCreditSale": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "สร้างบิลขายและอัปเดตยอดหนี้คงค้างของลูกหนี้ในคราวเดียว",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sale"
+                ],
+                "summary": "เพิ่มรายการขายค้างชำระ (เฉพาะ Credit เท่านั้น)",
+                "parameters": [
+                    {
+                        "description": "ข้อมูลรายการขายค้างชำระ",
+                        "name": "Sale",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Sale"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/createDebtor": {
             "post": {
                 "security": [
@@ -212,6 +261,129 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/debtor": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "ดึงข้อมูลลูกหนี้ทั้งหมด ของ shopid นั้น",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Debtor"
+                ],
+                "summary": "ดึงข้อมูลลูกหนี้",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "รหัสร้านค้า (Shop ID)",
+                        "name": "shop_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Debtor"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "ระบุพารามิเตอร์ไม่ครบ",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "ไม่พบข้อมูลลูกหนี้",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/debtor/search": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "ค้นหาลูกหนี้ด้วย Keyword (รองรับทั้ง ชื่อลูกหนี้, เบอร์โทร)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Debtor"
+                ],
+                "summary": "ค้นหาลูกหนี้",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "คำค้นหา (ระบุ  ชื่อ หรือ เบอร์โทร)",
+                        "name": "keyword",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "รหัสร้านค้า (Shop ID)",
+                        "name": "shop_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Debtor"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "ระบุพารามิเตอร์ไม่ครบ",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "ไม่พบข้อมูลลูกหนี้",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -398,7 +570,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "ค้นหาสินค้าด้วย Keyword (รองรับทั้ง Barcode, Product Code และชื่อสินค้า)",
+                "description": "ค้นหาสินค้าด้วย Keyword เฉพาะในร้านที่ระบุ (ป้องกันการเจอของร้านอื่น)",
                 "consumes": [
                     "application/json"
                 ],
@@ -412,8 +584,15 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "คำค้นหา (ระบุ Barcode, รหัส หรือ ชื่อ)",
+                        "description": "คำค้นหา (Barcode, รหัส, ชื่อ)",
                         "name": "keyword",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "รหัสร้านค้า (Shop ID)",
+                        "name": "shop_id",
                         "in": "query",
                         "required": true
                     }
@@ -686,7 +865,7 @@
                     "example": "123 ถ.สุขุมวิท แขวงคลองเตย เขตคลองเตย กทม 10110"
                 },
                 "credit_limit": {
-                    "type": "integer",
+                    "type": "number",
                     "example": 2000
                 },
                 "current_debt": {
@@ -707,6 +886,10 @@
                 "phone": {
                     "type": "string",
                     "example": "0654891234"
+                },
+                "shop_id": {
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
@@ -813,6 +996,73 @@
                 "username": {
                     "type": "string",
                     "example": "poder"
+                }
+            }
+        },
+        "models.Sale": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "created_buy": {
+                    "type": "string"
+                },
+                "created_time": {
+                    "type": "string"
+                },
+                "debtor_id": {
+                    "description": "ใช้ Pointer เพื่อให้เป็นค่า Null ได้",
+                    "type": "integer"
+                },
+                "net_price": {
+                    "type": "number"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "pay": {
+                    "type": "number"
+                },
+                "payment_method": {
+                    "description": "'cash', 'transfer', 'credit'",
+                    "type": "string"
+                },
+                "sale_id": {
+                    "type": "integer"
+                },
+                "sale_items": {
+                    "description": "สำหรับดึงข้อมูล SaleItems ออกมาพร้อมกับ Sale (ถ้าใช้ GORM)",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.SaleItem"
+                    }
+                },
+                "shop_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.SaleItem": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "price_per_unit": {
+                    "type": "number"
+                },
+                "product_id": {
+                    "type": "integer"
+                },
+                "sale_id": {
+                    "type": "integer"
+                },
+                "sale_items_id": {
+                    "type": "integer"
+                },
+                "total_price": {
+                    "type": "number"
                 }
             }
         },
